# hexlet_pytest

./: Makefile  README.md  pyproject.toml
tests/: test_stack.py
