[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["delvan <<anikeev30@yandex.ru>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
